# dio-fraud-detection

./: .gitignore  README.md  analise_crard_fraud.ipynb  pyproject.toml
