[project]
name = "dio-fraud-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayme Tosi Neto",email = "jaymetosineto@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pyod (>=2.0.7,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.2.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
